--- a/app/index.html
+++ b/app/index.html
@@ -27,34 +27,42 @@
 <div class="container">
     <div class="wrapper">
         <div class="wrapper__item">
+            <span>Item</span>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum eaque ratione adipisci, 
                 temporibus aspernatur corporis tempore! Accusamus ullam culpa natus. Suscipit impedit tempore necessitatibus doloribus, vero debitis beatae ex.
             </p>
+            <a href="#">About</a>
         </div>
         <div class="wrapper__item">
+            <span>Item</span>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum eaque ratione adipisci, 
                 temporibus aspernatur corporis tempore! Accusamus ullam culpa natus. Suscipit impedit tempore necessitatibus doloribus, vero debitis beatae ex.
             </p>
+            <a href="#">About</a>
         </div>
         <div class="wrapper__item">
+            <span>Item</span>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum eaque ratione adipisci, 
                 temporibus aspernatur corporis tempore! Accusamus ullam culpa natus. Suscipit impedit tempore necessitatibus doloribus, vero debitis beatae ex.
             </p>
+            <a href="#">About</a>
         </div>
         <div class="wrapper__item">
+            <span>Item</span>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio illum eaque ratione adipisci, 
                 temporibus aspernatur corporis tempore! Accusamus ullam culpa natus. Suscipit impedit tempore necessitatibus doloribus, vero debitis beatae ex.
             </p>
+            <a href="#">About</a>
         </div>
     </div>
 </div>
 
 
-<link rel="stylesheet" href="css/main-scss.min.css">
+<link rel="stylesheet" href="css/main-less.min.css">
 
 <script src="js/scripts.min.js"></script>
 <script src="js/common.js"></script>
